<resources>
    <string name="app_name">TreciDomaci</string>
    <string name="name">Name</string>
    <string name="number">Mobile number</string>
    <string name="email">Email</string>
    <string name="position">Position</string>
    <string name="salary">Sallary (USD)</string>
    <string name="enter">Enter</string>
    <string name="find_employee">Find</string>
    <string name="delete_employee">Delete Employee</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="write_message">Write message</string>
    <string name="enter_id_of_employee">enter ID</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="serbian_dinar">Serbian Dinar</string>
    <string name="british_pound">British Pound</string>
    <string name="euro">EURO</string>
    <string name="your_salary_is">Your salary is</string>
    <string name="salary_currency_converter">Salary Currency Converter</string>
</resources>
