<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_employees"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rs.fon.trecidomaci.activities.AddEmployees">

    <EditText android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        />

    <EditText android:id="@+id/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/number" />

    <EditText android:id="@+id/input_email"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText android:id="@+id/input_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/position"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="text"
        />


    <EditText android:id="@+id/input_sallary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="number"
        android:hint="@string/salary"/>
    <Button
        android:id="@+id/button_enter_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/enter"
        android:background="@drawable/shape_buttons"
        />

</LinearLayout>
