<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingLeft="25dp"
    android:paddingRight="15dp"
    tools:context="rs.fon.trecidomaci.fragments.CurrencyFragment">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/currency_converter"
    android:layout_marginTop="15dp"
    android:gravity="center"
    android:textSize="22sp"
    android:id="@+id/currency_text_view"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:id="@+id/usd_layout"
        android:layout_below="@id/currency_text_view"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_salary_is"
            android:textSize="20sp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usd"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:id="@+id/euro_layout"
        android:layout_below="@id/usd_layout"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euro"
        android:textSize="20sp"
        android:layout_weight="1"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/euro"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:id="@+id/gbp_layout"
        android:layout_below="@id/euro_layout"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/british_pound"
            android:textSize="20sp"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/gbp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:id="@+id/rsd_layout"
        android:layout_below="@id/gbp_layout"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serbian_dinar"
            android:textSize="20sp"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/rsd"
            />
    </LinearLayout>
</RelativeLayout>
