<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_employee_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rs.fon.trecidomaci.activities.EmployeeData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_layout"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"

        >
        <TextView
            android:text="ID: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/id_employee"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/name_layout"
        android:layout_below="@+id/id_layout"
        android:layout_marginTop="15dp"

        >
    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/name_employee"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/number_layout"
        android:layout_below="@+id/name_layout"
        android:orientation="horizontal"
        >
    <TextView
        android:text="@string/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/number_employee"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:id="@+id/mail_layout"
        android:layout_below="@+id/number_layout"
        >
        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_employee"
            android:textSize="20sp"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:id="@+id/position_layout"
        android:layout_below="@+id/mail_layout"
        >
        <TextView
            android:text="@string/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/position_employee"
            android:textSize="20sp"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:id="@+id/salary_layout"
        android:layout_below="@+id/position_layout"
        >
        <TextView
            android:text="@string/salary"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:id="@+id/salary_employee"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/image_layout"
        android:layout_below="@+id/salary_layout"
        android:longClickable="true">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.0"
            android:background="@drawable/shape_buttons"
            app:srcCompat="@android:drawable/sym_action_call"
            android:id="@+id/imageButtonCall" />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1.0"
            android:background="@drawable/shape_buttons"
            app:srcCompat="@android:drawable/sym_action_chat"
            android:id="@+id/imageButtonChat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_layout"
        android:layout_below="@+id/image_layout"
        android:longClickable="true">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_buttons"
        android:text="@string/salary_currency_converter"
        android:id="@+id/button_sallary"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/fragment_data"/>


</RelativeLayout>
